src/lesson 5/manifests/otus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: otus
  labels:
    app: otus
spec:
  ports:
    - protocol: TCP
      port: 8000
  selector:
    app: otus
  type: NodePort
